# M2RL

./: .gitignore
M2RL/: README.md  setup.sh
M2RL/MergeLM/: .gitignore  merge_llms.py  run.sh
M2RL/MergeLM/model_merging_methods/: merging_methods.py
M2RL/SandboxFusion/: INSTALL_UV.md  Makefile  pyproject.toml
M2RL/SandboxFusion/runtime/python/: pyproject.toml
M2RL/SandboxFusion/sandbox/runners/: base.py  major.py
M2RL/data/: download_aime.py  download_gpqa.py  download_ifbench.py  download_rl_train.sh  download_rl_val.sh  download_sft_train.sh  process_rl_data.py  process_sft_data.py  process_sft_data_2.py
M2RL/slime/: .gitignore  on_policy_distillation.py  pyproject.toml
M2RL/slime/eval_config/: multi_task.yaml
M2RL/slime/examples/retool/: tool_sandbox.py
M2RL/slime/scripts/: convert_qwen3_4B_base.sh  launch_dist.sh  multi_teacher_opd.sh  run-qwen3-4B-base-sft.sh  run-qwen3-4B-multi-task.sh
M2RL/slime/scripts/train_single_RL/: run-qwen3-4B-agent.sh  run-qwen3-4B-code.sh  run-qwen3-4B-if.sh  run-qwen3-4B-math.sh  run-qwen3-4B-science.sh
M2RL/slime/slime/backends/megatron_utils/: model.py
M2RL/slime/slime/backends/training_utils/: loss.py
M2RL/slime/slime/rewards/: code.py  math.py
M2RL/slime/slime/rewards/IFEvalG/: __init__.py  evaluation_main.py  instructions.py  instructions_registry.py
M2RL/slime/slime/rollout/: custom_rollout.py  sft_rollout.py  sglang_rollout.py
M2RL/slime/slime/rollout/rm_hub/: __init__.py  deepscaler.py  gpqa.py  ifbench.py
M2RL/slime/slime/rollout/workplace_assistant/: generate_with_workplace_assistant.py  openai_tool_adapter.py  sglang_tool_parser.py  tool_info.py  trainable_agents.py  types.py
M2RL/slime/slime/utils/: arguments.py  async_utils.py  data.py
