[project]
name = "sandbox-python-runtime"
version = "0.0.1"
dependencies = [
    "tensorflow==2.14.1",
    "torch==2.1.2",
    "flask==3.0.1",
    "toml==0.10.2",
    "pyqt5==5.15.10",
    "pytest-qt==4.3.1",
    "pytest-mock==3.12.0",
    "django==5.0.1",
    "grpcio-tools==1.60.0",
    "nameko==2.14.1",
    "wtforms==3.1.2",
    "flask-limiter==3.5.0",
    "scipy==1.11.4",
    "rdkit==2023.9.4",
    "coverage==7.4.0",
    "bs4==0.0.2",
    "lxml==5.1.0",
    "shapely==2.0.2",
    "xlrd==2.0.1",
    "numba==0.58.1",
    "absl-py==2.1.0",
    "opencv-python==4.9.0.80",
    "pillow==10.2.0",
    "plotly==5.18.0",
    "kaleido==0.2.1",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "openpyxl==3.1.2",
    "yolk==0.4.3",
    "xlsxwriter==3.1.9",
    "flask-restful==0.3.10",
    "scikit-image==0.22.0",
    "pycryptodomex==3.20.0",
    "pycryptodome==3.20.0",
    "statsmodels==0.14.1",
    "fastdtw==0.3.4",
    "kneed==0.8.5",
    "tree-sitter==0.20.4",
    "tree-sitter-languages==1.9.1",
    "gitpython==3.1.41",
    "docker==7.0.0",
    "werkzeug==3.0.1",
    "gmpy2==2.1.5",
    "pyscf==2.4.0",
    "pyberny==0.6.3",
    "redis==5.0.1",
    "pika==1.3.2",
    "pytest==7.4.4",
    "pymongo==4.6.1",
    "mongomock==4.1.2",
    "scikit-learn==1.4.0",
    "jsonlines==4.0.0",
    "faiss-cpu==1.7.4",
    "beautifulsoup4==4.12.3",
    "gql==3.5.0",
    "graphene==3.3",
    "flask-graphql==2.0.0",
    "graphql-core==3.2.3",
    "flask-sqlalchemy==3.1.1",
    "flask-caching==2.1.0",
    "flask-testing==0.8.1",
    "flask-wtf==1.2.1",
    "xgboost==2.0.3",
    "gensim==4.3.2",
    "matplotlib==3.8.2",
    "pandasql==0.7.3",
    "psutil==5.9.8",
    "datasketch==1.6.4",
    "pyjwt==2.8.0",
    "uvloop==0.19.0",
    "antlr4-python3-runtime==4.13.1",
    "numpy==1.26.3",
    "pandas==2.2.0",
    "arch==6.3.0",
    "lightgbm==4.3.0",
    "catboost==1.2.3",
    "torchinfo==1.8.0",
    "torchsummary==1.5.1",
    "xarray==2023.6.0",
    "pmdarima==2.0.4",
    "ruptures==1.1.9",
    "cryptography==42.0.5",
    "nltk==3.8.1",
    "pulp==2.8.0",
    "cvxpy==1.4.3",
    "python-docx==1.1.2",
    "pypdf2==3.0.1",
    "apscheduler==3.10.4",
    "colorama==0.4.4",
    "folium==0.16.0",
    "pydantic==2.6.4",
    "xlwt==1.3.0",
    "textblob==0.18.0.post0",
    "pymupdf==1.24.3",
    "faker==25.1.0",
    "pyzbar==0.1.9",
    "pytest-cov==5.0.0",
    "astor==0.8.1",
    "jupyter==1.0.0",
    "jupyter-client==8.6.2",
    "seaborn==0.13.2",
    "tabulate==0.9.0",
]
